# rust-coreaudio

./: .travis.yml  Cargo.toml  README.md
examples/: devices.rs  sine.rs
src/: main.rs
src/stream/: mod.rs
src/stream/audio_unit/: mod.rs  test.rs
src/utils/: mod.rs  test.rs
src/utils/audio_object/: mod.rs  test.rs
src/utils/audio_objects/: mod.rs  property_address.rs  test.rs
src/utils/audio_objects/audio_object_utils/: mod.rs  test.rs
src/utils/audio_objects/string_wrapper/: mod.rs
src/utils/string_helper/: mod.rs  test.rs
src/utils/string_wrapper/: mod.rs
