[package]
name = "rust-coreaudio"
version = "0.1.0"
authors = ["Chun-Min Chang <chun.m.chang@gmail.com>"]

[features]
default = ["core_audio"]
core_audio = ["coreaudio-sys/core_audio"]

[dependencies]
coreaudio-sys = { version = "0.2", default-features = false }
core-foundation-sys = { version = "0.6" }