[package]
name = "rust-coreaudio"
version = "0.1.0"
authors = ["Chun-Min Chang <chun.m.chang@gmail.com>"]

[features]
default = ["audio_unit", "core_audio"]
core_audio = ["coreaudio-sys/core_audio"]
audio_unit = ["coreaudio-sys/audio_unit"]

[dependencies]
coreaudio-sys = { version = "0.2", default-features = false }
core-foundation-sys = { version = "0.6" }